--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -8,11 +8,12 @@ layout: default
   {% include page__hero_video.html %}
 {% endif %}
 
-{% if page.url != "/" and site.breadcrumbs %}
+<!-- {% if page.url != "/" and site.breadcrumbs %}
   {% unless paginator %}
     {% include breadcrumbs.html %}
   {% endunless %}
-{% endif %}
+{% endif %}  -->
+<!-- Home/세부파일 주소 같은 형식의 글이 있는데 별로 맘에 안들어서 지웠음  -->
 
 <div id="main" role="main">
   {% include sidebar.html %}
